--- a/activities.html
+++ b/activities.html
@@ -121,8 +121,8 @@
         <p>Youth programs have been organized by the samithi since 2006, in schools in huzurnagar and mattampalli, kohtad melachruvu miryalguda garedepalli neredcherla. Guests impart knowledge to the children on various topics including skill development, concentration powers and who is  a real hero . 15 such programs have been organized over the years.</p>
 
         <div class="picture-block">
-          <img src=".\educational-activities-pictures\image1.jpg" class="picture-block-item updates-container">
-          <img src=".\educational-activities-pictures\image2.jpg" class="picture-block-item updates-container">
+          <img src=".\educational-activities-pictures\image1.JPG" class="picture-block-item updates-container">
+          <img src=".\educational-activities-pictures\image2.JPG" class="picture-block-item updates-container">
           <img src=".\educational-activities-pictures\image3.jpg" class="picture-block-item updates-container">
         </div>
       </div>
@@ -189,7 +189,7 @@
           </ul>
 
         <div class="picture-block">
-          <img src=".\cultural-activites\cultural1.jpg" class="picture-block-item updates-container">
+          <img src=".\cultural-activites\cultural1.JPG" class="picture-block-item updates-container">
           <img src=".\cultural-activites\cultural2.jpg" class="picture-block-item updates-container">
           <img src=".\cultural-activites\cultural3.jpg" class="picture-block-item updates-container">
         </div>
