--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,10 @@
       <p> Sri Rama Krishna Seva Samithi,<br> Huzur Nagar,<br>Telangana 508204,<br>India<br>Ph:9447080907</p>
     <div class="picture-block icon-container">
       <a href="https://www.facebook.com/rksshnr" target="_blank">
-        <img src=".\facebook\f_logo_RGB-Blue_58.png" class="icon">
+        <img src=".\f_logo_RGB-Blue_58.png" class="icon">
       </a>
       <a href = "https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber"  target="_blank">
-        <img src=".\youtube_full_color_icon\yt_icon_rgb.png" class="icon">
+        <img src=".\yt_icon_rgb.png" class="icon">
       </a>
     </div>
   </div>
