--- a/activities.html
+++ b/activities.html
@@ -71,7 +71,7 @@
         <p>Blood donation camps have been organized by the Samithi, in association with the Nalgonda Blood Bank, since 2006 on the birth anniversary of Swami Vivekananda. The Samithi has beed awarded the Best blood donation camp organizer award for 2011 by the Government of India.</p>
         <p>A camp was conducted in the month of May, 2020. Some of the pictures below:</p>
         <div class="picture-block">
-          <img src=".\blood donation may 2020\blood donation may 2020.jpg" class="picture-block-item updates-container">
+          <img src=".\blood donation may 2020\image 5.jpg" class="picture-block-item updates-container">
           <img src=".\blood donation may 2020\image 1.jpg" class="picture-block-item updates-container">
           <img src=".\blood donation may 2020\image 3.jpg" class="picture-block-item updates-container">
         </div>
