--- a/activities.html
+++ b/activities.html
@@ -30,7 +30,7 @@
       <input type="checkbox" id="toggle">
       <div class="menu">
         <ul>
-          <li><a href=".\index-new.html" class="menu-item">Home</a></li>
+          <li><a href=".\index.html" class="menu-item">Home</a></li>
           <li><a href=".\about.html" class="menu-item">About Us</a>
             <div class="dropdown-content">
               <a href=".\about.html" class="dropdown-item">Our inspiration</a>
