--- a/about.html
+++ b/about.html
@@ -93,6 +93,11 @@
       </div>
     </div>
     
+    <h2 class="page-title"> History of the Seva Samithi</h2>
+    <div class="page-flex border"></div>
+    <h2 class="page-title"> Our Volunteers</h2>
+    <div class="page-flex"></div>
+    
     <section id = "footer" class="footer page-footer">
       <div class="picture-block ">
         <i class="far fa-copyright white"></i>
