--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     </div>
 
     <h3 class = "page-section-title">Swami Vivekananda</h3>
-    <div class="page-flex">
+    <div class="page-flex border">
       <div class="page-img">
         <img src=".\aboutuspictures\Swami_Vivekananda_Jaipur1.jpg" alt="vivekananda" >
       </div>
