--- a/activities.html
+++ b/activities.html
@@ -160,7 +160,7 @@
     <h3 class = "page-section-title">Rural Development Activities</h3>
       <div class="full-para">
         <h4>Drinking water service</h4>
-        <p>An RO plant is established at the samithi that provides drinking water service to the poor. The plant was set up at a cost of Rs. 2 Lakhs, donated to us by the Ramakrishna Mutt of Hyderabad. Water from this plant is made available at the cost of Rs.5 per liter.</p>
+        <p>An RO plant is established at the samithi that provides drinking water service to the poor. The plant was set up at a cost of Rs. 2 Lakhs, donated to us by the Ramakrishna Mutt of Hyderabad. Water from this plant is made available at the cost of Rs.5 for 20 litres.</p>
 
         <div class="picture-block">
           <img src=".\drinking water service.jpg" class="picture-block-item updates-container">
