--- a/activities.html
+++ b/activities.html
@@ -30,7 +30,7 @@
       <input type="checkbox" id="toggle">
       <div class="menu">
         <ul>
-          <li><a href=".\index.html" class="menu-item">Home</a></li>
+          <li><a href=".\index-new.html" class="menu-item">Home</a></li>
           <li><a href=".\about.html" class="menu-item">About Us</a>
             <div class="dropdown-content">
               <a href=".\about.html" class="dropdown-item">Our inspiration</a>
@@ -61,9 +61,11 @@
       </div>
   </nav>
 
+  <section id="medical"></section>
+
   <div class="container page-content flex-box">
     <h2 class="page-title"> Activities undertaken by the Samithi</h2>
-    <section id="medical" class="picture-block border">
+    <section class="picture-block border">
       <h3 class = "page-section-title">Medical Activities</h3>
       <div class="full-para">
         <p>The Samithi renders service to the poor and helpless patients in and around the locality. The devoted and self-sacrificing services of other eminent doctors as well as lay devotees have enabled these activities to be carried out.</p>
@@ -90,7 +92,7 @@
         <li>Lingagiri</li>
         <li>Madirenigudam</li>
       </ul>
-      <div class="picture-block">
+      <div id="educational" class="picture-block">
         <img src=".\medical-activities-pictures\image1.jpg" class="picture-block-item updates-container">
         <img src=".\medical-activities-pictures\image13.jpg" class="picture-block-item updates-container">
         <img src=".\medical-activities-pictures\image18.jpg" class="picture-block-item updates-container">
@@ -100,7 +102,7 @@
     <a href = ".\activities-photos-link.html" target="_blank" class="btn page-btn" > View All Photos </a>
     </section>
 
-    <section id="educational" class="picture-block border">
+    <section  class="picture-block border">
     <h3 class = "page-section-title">Educational Activities</h3>
       <div class="full-para">
         <h4>Teachers Convention</h4>
@@ -120,7 +122,7 @@
         <h4>Youth Convention</h4>
         <p>Youth programs have been organized by the samithi since 2006, in schools in huzurnagar and mattampalli, kohtad melachruvu miryalguda garedepalli neredcherla. Guests impart knowledge to the children on various topics including skill development, concentration powers and who is  a real hero . 15 such programs have been organized over the years.</p>
 
-        <div class="picture-block">
+        <div id="relief" class="picture-block">
           <img src=".\educational-activities-pictures\image1.JPG" class="picture-block-item updates-container">
           <img src=".\educational-activities-pictures\image2.JPG" class="picture-block-item updates-container">
           <img src=".\educational-activities-pictures\image3.jpg" class="picture-block-item updates-container">
@@ -131,7 +133,7 @@
 
     </section>
 
-    <section id="relief" class="picture-block border">
+    <section  class="picture-block border">
     <h3 class = "page-section-title">Relief Activities</h3>
       <div class="full-para">
         <p>The Samithi undertakes instant relief operations during natural calamities like fire, cyclone, tsunami, earthquake, floods, etc and man-made disasters. Primary relief operations are undertaken immediately by providing food, clothing, utensils, etc.</p>
@@ -145,7 +147,7 @@
         <p>During the corona pandemic, we surveyed the affected regions in and around Huzurnagar. Relief activity was carried out in ward number 1 of Huzurnagar. Groceries worth Rs.25000 were distributed to 50 families. </p>
         <p>Being a non-government organization dedicated to the service of God in man, the Math is entirely dependent on the financial help extended to it by the generous public. All donations are thankfully accepted and acknowledged.</p>
 
-        <div class="picture-block">
+        <div id="rural" class="picture-block">
           <img src=".\coronareliefpictures\corona_relief.jpg" class="picture-block-item updates-container">
           <img src=".\coronareliefpictures\corona_relief_3.jpg" class="picture-block-item updates-container">
           <img src=".\coronareliefpictures\corona_relief_5.jpg" class="picture-block-item updates-container">
@@ -156,13 +158,13 @@
 
     </section>
 
-    <section id="rural" class="picture-block border">
+    <section  class="picture-block border">
     <h3 class = "page-section-title">Rural Development Activities</h3>
       <div class="full-para">
         <h4>Drinking water service</h4>
-        <p>An RO plant is established at the samithi that provides drinking water service to the poor. The plant was set up at a cost of Rs. 2 Lakhs, donated to us by the Ramakrishna Mutt of Hyderabad. Water from this plant is made available at the cost of Rs.5 for 20 litres.</p>
+        <p>An RO plant is established at the samithi that provides drinking water service to the poor. The plant was set up at a cost of Rs. 2 Lakhs, donated to us by the Ramakrishna Mutt of Hyderabad. Water from this plant is made available at the cost of Rs.5 per liter.</p>
 
-        <div class="picture-block">
+        <div id="cultural" class="picture-block">
           <img src=".\drinking water service.jpg" class="picture-block-item updates-container">
         </div>
       </div>
@@ -171,7 +173,7 @@
 
     </section>
 
-    <section id="cultural" class="picture-block">
+    <section  class="picture-block">
     <h3 class = "page-section-title">Cultural Activities</h3>
       <div class="full-para">
         <p>The Samithi is involved in a number of cultural activities throughout the year. The list of cultural activites conducted by the samithi are as follows:</p>
