--- a/donationappeal.html
+++ b/donationappeal.html
@@ -69,6 +69,7 @@
         <p>In order to execute the orders at hand, we appeal to you for contribution. Needless to mention, your help to the Samithi is your direct contribution to humanity.</p>
         <p>Your contribution will go a long way in ensuring timely completion of all projects which cater to the poor and need who are the beneficiaries. We also request you to share this with your friends and relatives who are keen to join in social and spiritual cause.</p>
         <p>You may send your contribution by cash or cheque in favour of ‘Sri Ramakrishna Seva Samithi’. Kindly provide your contact details and email id.</p>
+      <!--
         <table id="donate-table" class="table">
           <tr>
             <th>Activities in brief</th>
@@ -85,7 +86,7 @@
             <td>ertyuiop[]qw</td>
             <td>fghjkl;'#asd</td>
           </tr>
-        </table>
+        </table>-->
     </div>
 
     <section id = "footer" class="footer page-footer">
