--- a/infrastructure.html
+++ b/infrastructure.html
@@ -12,7 +12,7 @@
       <div class="inner_header">
         <div class="logo_container">
           <a href=".\index.html">
-            <img src="http://rksevasamithihnr.org/img/logo-web.png" alt="logo">
+            <img src=".\logo.jpg" alt="logo">
           </a>
         </div>
         <div class="header_text">
